Bug: Fix blurry elements in Chromium; style side-nav.

--- a/src/styles/base/_constants.less
+++ b/src/styles/base/_constants.less
@@ -6,6 +6,7 @@
 @font-color-white: #ededed;
 @font-color-default: rgb(120,120,120);
 @font-color-highlight: #585858;
+@font-color-blue: #68a3ee;
 @font-color-bold: #353535;
 @font-color-muted: #b6b6b6;
 @font-size-default: 1.6rem;
